--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,3 +56,12 @@ nav span {
 	width: 100%;
 	height: 100%;
 }
+
+button, input[type=submit] {
+	padding: 5px;
+	margin: 20px 0 20px 0;
+}
+
+table {
+	margin: 0 auto;
+}
