--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,6 +61,9 @@ button, input[type=submit] {
 	padding: 5px;
 	margin: 20px 0 20px 0;
 }
+tr button {
+ 	margin: 5px 0 5px 0;
+}
 
 table {
 	margin: 0 auto;
