--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
 				<span><a href="/quizes/author">Créditos</a></span>
 			</nav>
 
-			<section class="main" id=="s1">
+			<section class="main" id="s1">
 				<% if (errors.length) { %>
 					<span id="ErrorMsgs">
 						Corregir errores: <br/>
@@ -42,7 +42,7 @@
 				<a href="http://es.wikipedia.org/wiki/Quiz">
 					¿Qué es un Quiz?
 				</a>
-				<a href="https://github.com/emeceerre/quiz">Mi proyecto en Github</a>
+				<a href="https://github.com/emeceerre/quiz_m8">Mi proyecto en Github</a>
 			</footer>
 		</div>
 	</body>
