--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,4 +1,4 @@
-<form method="get" action="quizes">
+<form method="get" action="/quizes">
 	<input type="text" name="search"/>
 	<input type="submit" value="Buscar"/>
 </form>
@@ -7,6 +7,7 @@
 <% var i; for(i=0; i<quizes.length; i++) { %>
 	<tr>
 		<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+		<td><%= quizes[i].tematica %></td>
 		<td><a href="quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a><td>
 		<td>
 			<form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
