Busqueda y respuestas aceptan mayus y minus

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,7 @@
 				<span><a href="/quizes/author">Créditos</a></span>
 			</nav>
 
-			<section class="main" id=="s1">
+			<section class="main" id="s1">
 				<% if (errors.length) { %>
 					<span id="ErrorMsgs">
 						Corregir errores: <br/>
